HW6 add i18 for meals

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,17 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.dateTime=Дата/Время
+meal.description=Описание
+meal.calories=Калории
+meal.create=Добавить еду
+meal.edit=Редактировать еду
+meal.filter.fromDate=С даты (включительно)
+meal.filter.toDate=По дату (включительно)
+meal.filter.fromTime=Со времени (включительно)
+meal.filter.toTime=По время (включительно)
+meal.filter=Отфильтровать
+meal.addNew=Добавить еду
 common.select=Выбрать
+common.save=Сохранить
+common.cancel=Отменить
